Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6967

Inconsistent behaviour using Simulator

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.5.0-beta
    • Qt Creator 2.5.0-beta
    • None
    • Ubuntu 11.04, 32 bit
      Windows Vista, 64 bit
    •  009e73a50ce93c9d1b18d4d10b2215a57a12d50b

    Description

      When creating a 'Mobile Qt Application' I can only choose 'Harmattan' and 'Maemo' on the target setup page.

      After creation of the project, it is possible to switch to the 'Projects' view and add 'Qt Simulator' to the list of targets.

      You should either remove it from 'Projects' view's target selector - or add it on the target setup page...

      (I have configured Qt Versions and Toolchains for all of the above mentioned targets before trying to create the project)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes