Wizards: The simulator is for mobile development

Task-number: QTCREATORBUG-6967

Change-Id: Ie14d77ea0cc06e567a6802b7112a1f5926dc62cc
Reviewed-by: Alessandro Portale <alessandro.portale@nokia.com>