src/plugins/qt4projectmanager/qt-desktop/simulatorqtversion.cpp
@@ -106,6 +106,7 @@ Core::FeatureSet SimulatorQtVersion::availableFeatures() const
     if (qtVersion() >= QtSupport::QtVersionNumber(4, 7, 4)) //no reliable test for components, yet.
            features |= Core::FeatureSet(QtSupport::Constants::FEATURE_QTQUICK_COMPONENTS_MEEGO)
                    | Core::FeatureSet(QtSupport::Constants::FEATURE_QTQUICK_COMPONENTS_SYMBIAN);
+    features |= Core::FeatureSet(QtSupport::Constants::FEATURE_MOBILE);
 
     return features;
 }
